--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <h1> Ann C. Tseng </h1>
         <ul class="navigation">
             <li><a href="#about" class="nav-link">About</a></li>
-            <li><a href="#skills" class="nav-link">Skills</a></li>
-            <li><a href="#projects" class="nav-link">Projects</a></li>
+            <li><a href="#work" class="nav-link">Work</a></li>
             <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
@@ -45,12 +44,69 @@
     </nav>
 
     <!-- Hero Section -->
-
-    <!-- More about -->
-
-    <!-- Skills section -->
+    <section class="hero" id="about">
+        <img
+          src="assets/images/anntseng.svg"
+          alt="jane-doe"
+          loading="lazy"
+          class="hero-img"
+        />
+        <div class="bio">
+          <h2 class="bio-title">Hello there!</h2>
+          <p class="bio-text">
+            I'm an undergraduate student studying UX Design and Computer Science at Western Washington University!
+            I am a curious designer who seeks designing and developing to create compelling user experiences!
+          </p>
+        </div>
+    </section>
 
     <!-- Projects section -->
+    <section class="projects" id="projects">
+        <h2 class="projects-title">Work</h2>
+        <div class="projects-container">
+          <div class="project-container project-card">
+            <img
+              src="assets/images/Groovygroceries.png"
+              alt="groovy"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title">Groovy Groceries</h3>
+            <p class="project-details">
+              User Experience Design
+            </p>
+            <a href="#" target="_blank" class="project-link">View</a>
+          </div>
+
+          <div class="project-container project-card">
+            <img
+              src="assets/images/Noteable.png"
+              alt="noteable"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title">Noteable</h3>
+            <p class="project-details">
+                User Experience Design  
+            </p>
+            <a href="#" target="_blank" class="project-link">View</a>
+          </div>
+
+          <div class="project-container project-card">
+            <img
+              src="assets/images/Accessibilityresearch.png"
+              alt="accessibility"
+              loading="lazy"
+              class="project-pic"
+            />
+            <h3 class="project-title">Integrate Accessibility</h3>
+            <p class="project-details">
+              User Experience Research
+            </p>
+            <a href="#" target="_blank" class="project-link">View</a>
+          </div>
+        </div>
+    </section>
 
     <!-- Contact section -->
 
