added responsiveness css and js

--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       href="assets/icons/favicon-32x32.png"
     />
 
-    <!-- Animate CSS CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
     <title> Ann C. Tseng </title>
   </head>
 
@@ -36,7 +31,7 @@
         <ul class="navigation">
             <li><a href="#about" class="nav-link">About</a></li>
             <li><a href="#work" class="nav-link">Work</a></li>
-            <li><a href="#contact" class="nav-link">Contact</a></li>
+            <li><a href="https://drive.google.com/file/d/1blJUr8r6f8caPdDlw1iQXtjr6N1z9QSM/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
             <ion-icon class="bars" name="menu-outline"></ion-icon>
@@ -47,7 +42,7 @@
     <section class="hero" id="about">
         <img
           src="assets/images/anntseng.svg"
-          alt="jane-doe"
+          alt="ann-c-tseng"
           loading="lazy"
           class="hero-img"
         />
@@ -61,7 +56,7 @@
     </section>
 
     <!-- Projects section -->
-    <section class="projects" id="projects">
+    <section class="projects" id="work">
         <h2 class="projects-title">Work</h2>
         <div class="projects-container">
           <div class="project-container project-card">
@@ -108,13 +103,38 @@
         </div>
     </section>
 
-    <!-- Contact section -->
-
     <!-- Social accounts - Fixed to the right -->
+    <div class="socials">
+        <a href="#" target="_blank"
+          ><img
+            src="assets/icons/icons8-linkedin-circled.gif"
+            alt="Linkedin"
+            loading="lazy"
+            class="socicon"
+        /></a>
+        <a href="#" target="_blank"
+          ><img src="assets/icons/icons8-github.gif" alt="Resume" class="socicon"
+        /></a>
+    </div>
 
     <!-- Scroll to top -->
+    <i class="scroll-up" id="scroll-up"
+    ><img
+      src="assets/icons/icons8-upward-arrow.gif"
+      class="socicon up-arrow"
+      alt="scroll-up"
+    /></i>
 
     <!-- Footer section -->
+    <footer>
+        <p class="copy">&copy; Copyright 2022</p>
+        <p class="copy">
+          Made with &#x2661; by
+          <a href="https://www.linkedin.com/in/annct/" target="_blank"
+            >Ann C. Tseng</a
+          >
+        </p>
+  </footer>
 
     <!-- Website scripts -->
     <script src="assets/js/app.js"></script>
