added wip pages and updated icons

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/icons/apple-touch-icon.png"
+      href="assets/icons/tabIcon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/icons/favicon-32x32.png"
+      href="assets/icons/tabIcon.png"
     />
 
     <title> Ann C. Tseng </title>
@@ -70,7 +70,7 @@
             <p class="project-details">
               User Experience Design
             </p>
-            <a href="#" target="_blank" class="project-link">View</a>
+            <a href="./assets/projectPages/groovy.html" class="project-link">View</a>
           </div>
 
           <div class="project-container project-card">
@@ -84,7 +84,7 @@
             <p class="project-details">
                 User Experience Design  
             </p>
-            <a href="#" target="_blank" class="project-link">View</a>
+            <a href="./assets/projectPages/noteable.html" class="project-link">View</a>
           </div>
 
           <div class="project-container project-card">
@@ -98,16 +98,16 @@
             <p class="project-details">
               User Experience Research
             </p>
-            <a href="#" target="_blank" class="project-link">View</a>
+            <a href="./assets/projectPages/accessibility.html" class="project-link">View</a>
           </div>
         </div>
     </section>
 
     <!-- Social accounts - Fixed to the right -->
     <div class="socials">
-        <a href="#" target="_blank"
+        <a href="https://www.linkedin.com/in/annct/" target="_blank"
           ><img
-            src="assets/icons/icons8-linkedin-circled.gif"
+            src="assets/icons/linkedin.png"
             alt="Linkedin"
             loading="lazy"
             class="socicon"
@@ -117,7 +117,7 @@
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
     ><img
-      src="assets/icons/icons8-upward-arrow.gif"
+      src="assets/icons/uparrow.png"
       class="socicon up-arrow"
       alt="scroll-up"
     /></i>
