added folders specific to project pages

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--CSS Styles -->
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="./groovycss/styles.css" />
 
     <!-- Favicons -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/icons/tabIcon.png"
+      href="./groovyicons/"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/icons/tabIcon.png"
+      href="./groovyicons/tabIcon.png"
     />
 
     <title> Ann C. Tseng </title>
@@ -29,8 +29,8 @@
     <nav>
         <h1> Ann C. Tseng </h1>
         <ul class="navigation">
-            <li><a href="#about" class="nav-link">About</a></li>
-            <li><a href="#work" class="nav-link">Work</a></li>
+            <li><a href="../../index.html" class="nav-link">About</a></li>
+            <li><a href="../../index.html#work" class="nav-link">Work</a></li>
             <li><a href="https://drive.google.com/file/d/1blJUr8r6f8caPdDlw1iQXtjr6N1z9QSM/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
@@ -41,7 +41,7 @@
     <!-- Hero Section -->
     <section class="hero" id="about">
         <img
-          src="assets/images/anntseng.svg"
+          src="./groovyimages/anntseng.svg"
           alt="ann-c-tseng"
           loading="lazy"
           class="hero-img"
@@ -61,7 +61,7 @@
         <div class="projects-container">
           <div class="project-container project-card">
             <img
-              src="assets/images/Groovygroceries.png"
+              src="./groovyimages/Groovygroceries.png"
               alt="groovy"
               loading="lazy"
               class="project-pic"
@@ -70,12 +70,12 @@
             <p class="project-details">
               User Experience Design
             </p>
-            <a href="./assets/projectPages/groovyAssets/groovy.html" class="project-link">View</a>
+            <a href="../projectPages/groovy.html" class="project-link">View</a>
           </div>
 
           <div class="project-container project-card">
             <img
-              src="assets/images/Noteable.png"
+              src="./groovyimages/Noteable.png"
               alt="noteable"
               loading="lazy"
               class="project-pic"
@@ -84,12 +84,12 @@
             <p class="project-details">
                 User Experience Design  
             </p>
-            <a href="./assets/projectPages/noteableAssets/noteable.html" class="project-link">View</a>
+            <a href="../projectPages/noteable.html" class="project-link">View</a>
           </div>
 
           <div class="project-container project-card">
             <img
-              src="assets/images/Accessibilityresearch.png"
+              src="./groovyimages/Accessibilityresearch.png"
               alt="accessibility"
               loading="lazy"
               class="project-pic"
@@ -98,7 +98,7 @@
             <p class="project-details">
               User Experience Research
             </p>
-            <a href="./assets/projectPages/accessibilityAssets/accessibility.html" class="project-link">View</a>
+            <a href="../projectPages/accessibility.html" class="project-link">View</a>
           </div>
         </div>
     </section>
@@ -107,7 +107,7 @@
     <div class="socials">
         <a href="https://www.linkedin.com/in/annct/" target="_blank"
           ><img
-            src="assets/icons/linkedin.png"
+            src="./groovyicons/linkedin.png"
             alt="Linkedin"
             loading="lazy"
             class="socicon"
@@ -117,7 +117,7 @@
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
     ><img
-      src="assets/icons/uparrow.png"
+      src="./groovyicons/uparrow.png"
       class="socicon up-arrow"
       alt="scroll-up"
     /></i>
@@ -134,7 +134,7 @@
   </footer>
 
     <!-- Website scripts -->
-    <script src="assets/js/app.js"></script>
+    <script src="./groovyjs/app.js"></script>
 
     <!-- Ion icons scripts -->
     <script
