--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -29,8 +29,8 @@
     <nav>
         <h1> Ann C. Tseng </h1>
         <ul class="navigation">
-            <li><a href="../../index.html" class="nav-link">About</a></li>
-            <li><a href="../../index.html#work" class="nav-link">Work</a></li>
+            <li><a href="../../../index.html" class="nav-link">About</a></li>
+            <li><a href="../../../index.html#work" class="nav-link">Work</a></li>
             <li><a href="https://drive.google.com/file/d/1blJUr8r6f8caPdDlw1iQXtjr6N1z9QSM/view?usp=sharing" target="_blank" class="nav-link">Resume</a></li>
         </ul>
         <button class="burger-menu" id="burger-menu">
