updated folder organization and added banner to Groovy Groceries Case Study Page

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -38,7 +38,18 @@
         </button>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- CASE STUDY BEGIN: -->
+    <!-- Banner -->
+    <section class="banner">
+      <img
+        src="./groovyimages/groovy cover photo.png"
+        alt="Groovy Groceries Banner Photo"
+        loading="lazy"
+        class="banner-img"
+      />
+    </section>
+
+    <!-- Hero Section
     <section class="hero" id="about">
         <img
           src="./groovyimages/anntseng.svg"
@@ -53,9 +64,9 @@
             I am a curious designer who seeks designing and developing to create compelling user experiences!
           </p>
         </div>
-    </section>
+    </section> -->
 
-    <!-- Projects section -->
+    <!-- Projects section
     <section class="projects" id="work">
         <h2 class="projects-title">Work</h2>
         <div class="projects-container">
@@ -101,18 +112,9 @@
             <a href="../projectPages/accessibility.html" class="project-link">View</a>
           </div>
         </div>
-    </section>
+    </section> -->
 
-    <!-- Social accounts - Fixed to the right -->
-    <div class="socials">
-        <a href="https://www.linkedin.com/in/annct/" target="_blank"
-          ><img
-            src="./groovyicons/linkedin.png"
-            alt="Linkedin"
-            loading="lazy"
-            class="socicon"
-        /></a>
-    </div>
+    <!-- CASE STUDY END! -->
 
     <!-- Scroll to top -->
     <i class="scroll-up" id="scroll-up"
