added Groovy Groceries intro strip

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -49,6 +49,40 @@
       />
     </section>
 
+    <!-- Intro Section -->
+    <section class="intro">
+      <div class="intro_left">
+        <h2 class="intro-title"> Groovy Groceries </h2>
+        <p class="intro-topic_time"> 
+          UX Design & Research | Aug. 2021-Aug. 2022 
+        </p>
+        <p class="intro-topic_time"> 
+          Groovy Groceries is a university grocery app that helps college students 
+          find ways to use their school dining dollars, budget their spendings, plan 
+          out meals, and grocery shop with ease.
+        </p>       
+      </div>
+
+      <div class="intro_right">
+        <h4>My Role: UX Designer</h4>
+        <p>
+          User research, affinity diagramming, empathy map, 
+          user persona, user flow, info architecture, 
+          low-high fidelity wireframing, and prototyping
+        </p>
+
+        <h4>Tools:</h4>
+        <p>
+          Figma and Miro
+        </p>
+
+        <h4>Team:</h4>
+        <p>
+          Emily Song
+        </p>
+      </div>
+    </section>
+
     <!-- Hero Section
     <section class="hero" id="about">
         <img
