design question section added

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -83,6 +83,15 @@
       </div>
     </section>
 
+    <section class="design_question">
+      <hr>
+      <h4>Design Question</h4>
+      <p>
+        How might we help student stay on top of their grocery needs?
+      </p>
+      <hr>
+    </section>
+
     <!-- Hero Section
     <section class="hero" id="about">
         <img
