--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -92,6 +92,49 @@
       <hr>
     </section>
 
+    <section class="research">
+      <h4>Research</h4>
+      <p>I conduct user surveys to answer the following key areas of interest:</p>
+      <ol>
+        <li>
+          What are notable preferences and barriers that can impact a student's grocery, meal planning, and budgeting experience?
+        </li>
+        <li>
+          Understand users' shopping, meal planning, and budgeting processes.
+        </li>
+      </ol>
+
+      <p class="survey_process">
+        I included both qualitative (free-response) and quantitative (multiple choice) questions within our survey 
+        to see how each user differs in their approach to buying groceries, budgeting, and meal planning.
+      </p>
+
+      <p class="survey_intended_respondents">
+        Intended respondents: University Students <br>
+        Survey respondents: Individuals from diverse background and age-groups 
+      </p>
+
+      <!-- Survey Limitations -->
+      <h4 class="survey_limitations_title">
+        Limitations:
+      </h4>
+      <ul class="survey_limitations_ul">
+        <li class="survey_limitations_li">
+          11 respondents is not a large sample size.
+        </li>
+        <li class="survey_limitations_li">
+          Due to sending out the survey to online outlets with diverse users, 
+          we got a lot of variation in respondents and not a lot of responses specifically from university students.        
+        </li>
+      </ul>
+
+      <!-- power point of research questions and responses -->
+      <iframe
+      src = "./groovyimages/Groovy Groceries - Survey Responses.pdf">
+      </iframe>
+
+    </section>
+
     <!-- Hero Section
     <section class="hero" id="about">
         <img
