added affinity diagram portion and starting main finding synthesis

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -94,7 +94,7 @@
 
     <section class="research">
       <h4>Research</h4>
-      <p>I conduct user surveys to answer the following key areas of interest:</p>
+      <p class="research_intro_centered">I conduct user surveys to answer the following key areas of interest:</p>
       <ol>
         <li>
           What are notable preferences and barriers that can impact a student's grocery, meal planning, and budgeting experience?
@@ -106,7 +106,11 @@
 
       <p class="survey_process">
         I included both qualitative (free-response) and quantitative (multiple choice) questions within our survey 
-        to see how each user differs in their approach to buying groceries, budgeting, and meal planning.
+        to see how each user differs in their approach to buying groceries, budgeting, and meal planning. <br>
+
+        <a href="https://drive.google.com/file/d/19Qd6ZjNVuujY7l2LTN-B0ayD63-v9Xg-/view?usp=sharing" target="_blank">
+          <h4 class="view_survey_responses"><i>View Survey Responses</i></h4>
+        </a>
       </p>
 
       <p class="survey_intended_respondents">
@@ -116,22 +120,55 @@
 
       <!-- Survey Limitations -->
       <h4 class="survey_limitations_title">
-        Limitations:
+        Method Limitations:
       </h4>
       <ul class="survey_limitations_ul">
         <li class="survey_limitations_li">
           11 respondents is not a large sample size.
         </li>
         <li class="survey_limitations_li">
-          Due to sending out the survey to online outlets with diverse users, 
-          we got a lot of variation in respondents and not a lot of responses specifically from university students.        
+          Due to sending out the survey to online forums with diverse users, 
+          we got a lot of variation in responses and not a lot of responses specifically from university students.        
         </li>
       </ul>
 
-      <!-- power point of research questions and responses -->
-      <iframe
-      src = "./groovyimages/Groovy Groceries - Survey Responses.pdf">
-      </iframe>
+      <!-- Justify method and show affinity diagram -->
+      <p style="margin-top:3rem">
+        Even though there are limitations with our method of choice, there were still valuable data gathered from the responses.
+        So, in order to observe patterns more succinctly, I created an Affinity Diagram
+        to organize and consolidate commonalities and differences between responses.
+      </p>
+      <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram">
+
+      <!-- 6 Main Findings -->
+      <p style="margin-top:3rem">
+        Using the Affinity Diagram, I grouped common patterns into 6 main findings:
+      </p>
+      <div class="six_main_findings">
+          <div class="findings_box">
+            <p> 1 </p>
+          </div>
+
+          <div class="findings_box">
+            <p> 2 </p>
+          </div>
+  
+          <div class="findings_box">
+            <p> 3 </p>
+          </div>
+
+          <div class="findings_box">
+            <p> 1 </p>
+          </div>
+  
+          <div class="findings_box">
+            <p> 2 </p>
+          </div>
+  
+          <div class="findings_box">
+            <p> 3 </p>
+          </div>
+      </div>
 
     </section>
 
