added preliminary Main Findings section using table css styling

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -141,33 +141,31 @@
       <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram">
 
       <!-- 6 Main Findings -->
+      <h4>6 Main Findings</h4>
       <p style="margin-top:3rem">
-        Using the Affinity Diagram, I grouped common patterns into 6 main findings:
+        Using the Affinity Diagram, I grouped common patterns into a few main findings:
       </p>
-      <div class="six_main_findings">
-          <div class="findings_box">
-            <p> 1 </p>
-          </div>
-
-          <div class="findings_box">
-            <p> 2 </p>
-          </div>
-  
-          <div class="findings_box">
-            <p> 3 </p>
-          </div>
-
-          <div class="findings_box">
-            <p> 1 </p>
-          </div>
-  
-          <div class="findings_box">
-            <p> 2 </p>
-          </div>
-  
-          <div class="findings_box">
-            <p> 3 </p>
-          </div>
+      <div class="Row">
+        <div class="Column">
+          82% of individuals cook at home, at least once a week
+        </div>
+        <div class="Column">
+          Shoppers make a physical or mental list of what they need before going out
+        </div>
+        <div class="Column">
+          Meal planning is often spontaneously done, depending on busyness and the groceries available at home
+        </div>
+      </div>
+      <div class="Row">
+        <div class="Column">
+          Shoppers stated grocery store proximity, quality of produce, and financially within budget as their top shopping priorities
+        </div>
+        <div class="Column">
+          Top frustrations with grocery shopping include missing products, checkout lines, and physical setbacks such as inability to carry certain produce
+        </div>
+        <div class="Column">
+          Many shoppers do not have a set method for budgeting on a regular basis
+        </div>
       </div>
 
     </section>
