finished research main findings, empathy map, and user persona sections. Starting information architecture writeup

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -168,72 +168,46 @@
         </div>
       </div>
 
+      <!-- Empathy Map -->
+      <h4 class="empathy_map_title">Empathy Map</h4>
+      <p class="empathy_map_p">
+        From the survey findings, I created an empathy map to categorize the data into a more comprehensive diagram 
+        that can be used to represent our users' needs, wants, actions, and thought processes.
+      </p>
+      <img class="empathy_map" src="./groovyimages/Empathy Map.png" alt="Groovy Groceries Empathy Map">
+
+
+      <!-- User Perrsona -->
+      <h4 class="user_persona_title">User Persona</h4>
+      <p class="user_persona_p">
+        Informed by the empathy map, I then made a user persona to gain a better understanding of our product's user, who they are, what they want and need, and painpoints they encounter.
+      </p>
+      <img class="user_persona" src="./groovyimages/User Persona.png" alt="Groovy Groceries User Persona">
     </section>
 
-    <!-- Hero Section
-    <section class="hero" id="about">
-        <img
-          src="./groovyimages/anntseng.svg"
-          alt="ann-c-tseng"
-          loading="lazy"
-          class="hero-img"
-        />
-        <div class="bio">
-          <h2 class="bio-title">Hello there!</h2>
-          <p class="bio-text">
-            I'm an undergraduate student studying UX Design and Computer Science at Western Washington University!
-            I am a curious designer who seeks designing and developing to create compelling user experiences!
-          </p>
-        </div>
-    </section> -->
+    <!-- Information Architecture -->
+    <section class="information_architecture">
+      <h4 class="information_architecture_title">
+        Information Architecture
+      </h4>
+      <p class="information_architecture_p">
+        From the research findings, empathy map, and user persona, 
+      </p>
 
-    <!-- Projects section
-    <section class="projects" id="work">
-        <h2 class="projects-title">Work</h2>
-        <div class="projects-container">
-          <div class="project-container project-card">
-            <img
-              src="./groovyimages/Groovygroceries.png"
-              alt="groovy"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Groovy Groceries</h3>
-            <p class="project-details">
-              User Experience Design
-            </p>
-            <a href="../projectPages/groovy.html" class="project-link">View</a>
-          </div>
+    </section>
 
-          <div class="project-container project-card">
-            <img
-              src="./groovyimages/Noteable.png"
-              alt="noteable"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Noteable</h3>
-            <p class="project-details">
-                User Experience Design  
-            </p>
-            <a href="../projectPages/noteable.html" class="project-link">View</a>
-          </div>
 
-          <div class="project-container project-card">
-            <img
-              src="./groovyimages/Accessibilityresearch.png"
-              alt="accessibility"
-              loading="lazy"
-              class="project-pic"
-            />
-            <h3 class="project-title">Integrate Accessibility</h3>
-            <p class="project-details">
-              User Experience Research
-            </p>
-            <a href="../projectPages/accessibility.html" class="project-link">View</a>
-          </div>
-        </div>
-    </section> -->
+
+    
+
+
+
+
+
+
+
+
+
 
     <!-- CASE STUDY END! -->
 
