added information architecture, lowfidelity wireframes, and first iteration of high fidelity wireframes sections

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -177,23 +177,95 @@
       <img class="empathy_map" src="./groovyimages/Empathy Map.png" alt="Groovy Groceries Empathy Map">
 
 
-      <!-- User Perrsona -->
+      <!-- User Persona -->
       <h4 class="user_persona_title">User Persona</h4>
       <p class="user_persona_p">
         Informed by the empathy map, I then made a user persona to gain a better understanding of our product's user, who they are, what they want and need, and painpoints they encounter.
       </p>
       <img class="user_persona" src="./groovyimages/User Persona.png" alt="Groovy Groceries User Persona">
-    </section>
 
-    <!-- Information Architecture -->
-    <section class="information_architecture">
+      <!-- Information Architecture -->
       <h4 class="information_architecture_title">
         Information Architecture
       </h4>
       <p class="information_architecture_p">
-        From the research findings, empathy map, and user persona, 
+        I then created an information architecture of our product's layout in order to map out how users will be navigating from one experience flow to another.
+      </p>
+      <img class="information_architecture" src="./groovyimages/Information Architecture.png" alt="Groovy Groceries Information Architecture">
+
+      <!-- Lowfidelity -->
+      <h4 class="lowfi_title">
+        Low-fidelity Wireframes
+      </h4>
+      <p class="lowfi_p">
+        Using the information architecture, I created low-fidelity wireframes to translate our user experience flows into our product's beginning visual concepts, and to 
+        further develop our early design decisions.
+      </p>
+      <img class="low_fidelity_wireframes" src="./groovyimages/Lowfi Wireframes.png" alt="Groovy Groceries Low Fidelity Wireframes">
+    </section>
+
+    <!-- First Iteration of High Fidelity Wireframes -->
+    <section class="first_highfi">
+      <h4 class="first_highfi_title">
+        Initial Iteration High-fidelity Wireframes
+      </h4>
+      <p class="highfi_p">
+        From low-fidelity, I created the first iteration of high-fidelity wireframes for the product's main screens.
       </p>
 
+      <div class="initial_highfi_row">
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/1 - Login.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/2 - Sign up.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/3 - Home.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+      </div>
+
+      <div class="initial_highfi_row">
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/4 - Grocery Shop.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/5 - Cart.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/6 - Grocery Item.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+      </div>
+
+      <div class="initial_highfi_row">
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/7 - Student Card Payment.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/8 - Credit Card Payment.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/9 - Budgeting.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+      </div>
+
+      <div class="initial_highfi_row">
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/10 - Meal Plan.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/11 - Meal Plan Edit.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/12 - Orders History.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+      </div>
+
+      <div class="last_initial_highfi_row">
+        <div class="initial_highfi_column">
+          <img class="initial_highfi_img" src="./groovyimages/initialhighfi/13 - Student Profile.png" alt="Groovy Groceries Initial Highfi Wireframe Image">
+        </div>
+      </div>
     </section>
 
 
