fixed paragraph margins for smaller screen sizes

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -210,7 +210,7 @@
         Initial Iteration High-fidelity Wireframes
       </h4>
       <p class="highfi_p">
-        From low-fidelity, I created the first iteration of high-fidelity wireframes for the product's main screens.
+        From the low-fidelity wireframes, I created the first iteration of high-fidelity wireframes for the product's main screens.
       </p>
 
       <div class="initial_highfi_row">
@@ -268,18 +268,14 @@
       </div>
     </section>
 
-
-
-    
-
-
-
-
-
-
-
-
-
+    <section class="initial_highfi_features_section">
+      <h4>
+        Initial High-fidelity Key Features
+      </h4>
+      <p>
+        I then created prototype flows of Groovy Groceries' key features to explore more indepthly the ways users can interact with the product.
+      </p>
+    </section>
 
     <!-- CASE STUDY END! -->
 
