starting the intro section of the initial highfi key features section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -273,8 +273,9 @@
         Initial High-fidelity Key Features
       </h4>
       <p>
-        I then created prototype flows of Groovy Groceries' key features to explore more indepthly the ways users can interact with the product.
+        I then created prototype flows of Groovy Groceries' key features to more indepthly explore the experiences users can have within the product.
       </p>
+
     </section>
 
     <!-- CASE STUDY END! -->
