working on key features initial highfi strip

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -276,6 +276,25 @@
         I then created prototype flows of Groovy Groceries' key features to more indepthly explore the experiences users can have within the product.
       </p>
 
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Onboarding</h4>
+          <p>
+            Students can create their Groovy Groceries account,
+            get connected to their school system, and input their 
+            adjustible budgeting goal.
+          </p>
+        </div>
+      </section>
+      
+
+
+      
+
     </section>
 
     <!-- CASE STUDY END! -->
