completed initial highfi prototype flow sections

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -268,6 +268,7 @@
       </div>
     </section>
 
+    <!-- Initial Highfi GIF Key Features Section -->
     <section class="initial_highfi_features_section">
       <h4>
         Initial High-fidelity Key Features
@@ -276,9 +277,10 @@
         I then created prototype flows of Groovy Groceries' key features to more indepthly explore the experiences users can have within the product.
       </p>
 
+      <!-- Onboarding -->
       <section class="ihf_strip">
         <div class="ihf_strip_left">
-          <img class="affinity_diagram" src="./groovyimages/Affinity Diagram.png" alt="Groovy Groceries Affinity Diagram">
+          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-SignUp.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
         </div>
 
         <div class="ihf_strip_right">
@@ -290,11 +292,78 @@
           </p>
         </div>
       </section>
-      
 
+      <!-- Shop -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Shop.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
+        </div>
 
-      
+        <div class="ihf_strip_right">
+          <h4>Grocery Shopping</h4>
+          <p>
+            The shopping flow leads students to look through stores where they can purchase items from using their student card or credit card. 
+            As per student need, there are in-store pickup or delivery options.
+          </p>
+        </div>
+      </section>
 
+      <!-- Budget -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Budget.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Budgeting</h4>
+          <p>
+            Students can look up their weekly balance and set a weekly spending goal to helps them keep track of their weekly spendings. 
+            Information on their last transaction, weekly spending, and spending categories are also available.
+          </p>
+        </div>
+      </section>
+
+      <!-- Meal Plan -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Plan.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Meal Planning</h4>
+          <p>
+            Students can set up and view weekly meal plan info such as date, meal type (breakfast, lunch, dinner), name, and any planning notes.
+          </p>
+        </div>
+      </section>
+
+      <!-- Order History -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Orders.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Order History</h4>
+          <p>
+            Students can see a history of their past transactions as well as current delivery purchases.
+          </p>
+        </div>
+      </section>
+
+      <!-- Student Profile -->
+      <section class="ihf_strip">
+        <div class="ihf_strip_left">
+          <img class="ihf_strip_img" src="./groovyimages/initialhighfiGIF/GroovyGroceries-Profile.gif" alt="Groovy Groceries Initial High-fidelity Prototype Flow">
+        </div>
+
+        <div class="ihf_strip_right">
+          <h4>Student Profile</h4>
+          <p>
+            Students can view their student info, and can log out of the app as needed.
+          </p>
+        </div>
+      </section>
     </section>
 
     <!-- CASE STUDY END! -->
