fixed margin styling error for last 2 strips of ihf section

--- a/assets/projectPages/groovyAssets/groovy.html
+++ b/assets/projectPages/groovyAssets/groovy.html
@@ -346,7 +346,8 @@
         <div class="ihf_strip_right">
           <h4>Order History</h4>
           <p>
-            Students can see a history of their past transactions as well as current delivery purchases.
+            Students can see a history of their past transactions as well as current delivery purchases. 
+            The app will show pending or completed orders & track delivery/pickup status for all orders.
           </p>
         </div>
       </section>
@@ -360,7 +361,7 @@
         <div class="ihf_strip_right">
           <h4>Student Profile</h4>
           <p>
-            Students can view their student info, and can log out of the app as needed.
+            Students can view their student class, major, phone number, and student ID. Additionally, students can log out of the app as needed.
           </p>
         </div>
       </section>
